# stm32-usbd-examples

example-stm32f070f6/: Cargo.toml  memory.x
example-stm32f070f6/src/: main.rs
